# PellMon

./: .gitignore  CHANGELOG.md  Makefile.am  README.md  auth.py  configure.ac  daemon.py  datamap.py  installall.sh  logview.py  pellmon.conf  pellmoncli.py  pellmoncli.py.save  pellmonsrv.py  pellmonweb.py  pellmonwebb.py  reinstall.sh
data/: Makefile.am  pellmon_dbus.conf  pellmon_dbus.conf.in
debian/: README.Debian  control  copyright  pellmon.postinst  pellmon.postrm  pellmon.prerm  rules
html/: index.html  layout.html  login.html  loglines.html  logview.html  parameters.html
initscript/: Makefile.am  pellmonsrv.in  pellmonweb.in
media/: index.html
media/js/: index.js  logview.js  parameters.js
src/: .gitignore  Makefile.am  debugsrv.sh  debugweb.py  debugweb.sh  makedeb.sh  pellmon.conf.in  pellmoncli.in  pellmoncli.py  pellmonconf  pellmonconf.in  pellmonsrv  pellmonsrv.in  pellmonsrv.py  pellmonweb  pellmonweb.in  pellmonweb.py
src/Pellmonsrv/: Makefile.am  __init__.py  database.py  directories.py.in  pellmonsrv.py  plugin_categories.py
src/Pellmonsrv/plugins/: Makefile.am  calculate.pellmon-plugin  categoriess.py  cleaning.pellmon-plugin  consumption.pellmon-plugin  customalarms.pellmon-plugin  exec.pellmon-plugin  heatingcircuit.pellmon-plugin  mgm.pellmon-plugin  nbecom.pellmon-plugin  onewire.pellmon-plugin  openweathermap.pellmon-plugin  owfs.pellmon-plugin  pelletcalc.pellmon-plugin  raspberrygpio.yapsy-plugin  scottecom.pellmon-plugin  scottecom.py  silolevel.pellmon-plugin  testplugin.yapsy-plugin
src/Pellmonsrv/plugins/calculate/: Makefile.am  __init__.py
src/Pellmonsrv/plugins/cleaning/: Makefile.am  __init__.py
src/Pellmonsrv/plugins/consumption/: Makefile.am  __init__.py
src/Pellmonsrv/plugins/consumption/templates/: consumption1y  consumption24h  consumption7d  consumption8w
src/Pellmonsrv/plugins/customalarms/: Makefile.am  __init__.py
src/Pellmonsrv/plugins/exec/: Makefile.am  __init__.py
src/Pellmonsrv/plugins/heatingcircuit/: Makefile.am  __init__.py
src/Pellmonsrv/plugins/mgm/: Makefile.am  __init__.py  test.py
src/Pellmonsrv/plugins/nbecom/: Makefile.am  __init__.py
src/Pellmonsrv/plugins/nbecom/nbeprotocol/: directories.py.in  exceptions.py  frames.py  langmap.py  language.py  protocol.py  protocolexceptions.py  v1frames.py  v2frames.py  v3frames.py
src/Pellmonsrv/plugins/nbecom/nbeprotocol/language/: COPYING  lang.uk.prop
src/Pellmonsrv/plugins/onewire/: Makefile.am  __init__.py
src/Pellmonsrv/plugins/openweathermap/: Makefile.am  __init__.py
src/Pellmonsrv/plugins/owfs/: Makefile.am  __init__.py
src/Pellmonsrv/plugins/owfs/ownet_fix/: __init__.py  connection.py
src/Pellmonsrv/plugins/pelletcalc/: Makefile.am  __init__.py
src/Pellmonsrv/plugins/raspberrygpio/: Makefile.am  __init__.py  __init__.py.save
src/Pellmonsrv/plugins/scottecom/: Makefile.am  __init__.py  datamenu.py  descriptions.py  menus.py  scottecom.py  timerstatus.py
src/Pellmonsrv/plugins/silolevel/: Makefile.am  __init__.py
src/Pellmonsrv/plugins/testplugin/: Makefile.am  __init__.py
src/Pellmonsrv/yapsy/: Makefile.am  PluginManager.py
src/Pellmonweb/: Makefile.am  __init__.py  auth.py  consumption.py  logview.py  pellmonconf.py  pellmonweb.py  version.py.in
src/Pellmonweb/html/: about.html  consumption.html  events  graph  index.html  layout.html  login.html  loglines.html  logview.html  parameters.html  systemimage
src/Pellmonweb/html_conf/: layout.html  source.html
src/Pellmonweb/media/: pellmon.css
src/Pellmonweb/media/codemirror/lib/: codemirror.css
src/Pellmonweb/media/codemirror/mode/simple/: simple.js
src/Pellmonweb/media/css/: pellmon.css  pellmonconf.css  pellmonconf_print.css
src/Pellmonweb/media/img/: browserconfig.xml
src/Pellmonweb/media/js/: consumption.js  index.js  logview.js  parameters.js  reconnectingwebsocket.js  source.js  websocket.js
src/Scotteprotocol/: Makefile.am  __init__.py  datamap.py  datamenu.py  enumerations.py  protocol.py  transformations.py
src/conf.d/: .gitignore  Makefile.am  database.conf.in  email.conf  enabled_plugins.conf  pellmonweb.conf.in  webinterface.conf.in
src/conf.d/plugins/: calculate.conf  customalarms.conf  exec.conf  heatingcircuit.conf  mgm.conf  nbecom.conf  onewire.conf  openweathermap.conf  owfs.conf  pelletcalc.conf  raspberrygpio.conf  scottecom.conf  testplugin.conf
src/srv/: Makefile.am  daemon.py  protocol.py
src/web/: Makefile.am  consumption.py
src/web/html/: graphconf.html  index.html  login.html  parameters.html
src/web/media/js/: index.js  logview.js  parameters.js
srv/: __init__.py  daemon.py  datamap.py  datamenu.py  descriptions.py  enumerations.py  frame.py  frames.py  menus.py  protocol.py
web/: __init__.py  auth.py  consumption.py  logview.py  path.py
web/html/: consumption.html  graphconf.html  index.html  layout.html  login.html  logview.html  parameters.html
web/media/js/: index.js  logview.js  parameters.js  spin.js
