web_PYTHON = \
	auth.py \
	consumption.py \
	logview.py \
	__init__.py 

webdir = $(pythondir)/web

nobase_dist_foohtml_DATA = \
	media/js/spin.js \
	media/js/logview.js \
	media/js/index.js \
	media/js/parameters.js \
	media/bootstrap/js/bootstrap.js \
	media/bootstrap/js/bootstrap.min.js \
	media/bootstrap/img/glyphicons-halflings-white.png \
	media/bootstrap/img/glyphicons-halflings.png \
	media/bootstrap/css/bootstrap.css \
	media/bootstrap/css/bootstrap-responsive.min.css \
	media/bootstrap/css/bootstrap.min.css \
	media/bootstrap/css/bootstrap-responsive.css \
	media/favicon.ico \
	media/pellmon.svg \
	media/bs3/fonts/glyphicons-halflings-regular.svg \
	media/bs3/fonts/glyphicons-halflings-regular.woff \
	media/bs3/fonts/glyphicons-halflings-regular.eot \
	media/bs3/fonts/glyphicons-halflings-regular.ttf \
	media/bs3/js/bootstrap.js \
	media/bs3/js/bootstrap.min.js \
	media/bs3/css/bootstrap-theme.min.css \
	media/bs3/css/bootstrap.css \
	media/bs3/css/bootstrap-theme.css \
	media/bs3/css/bootstrap.min.css \
	html/layout.html \
	html/parameters.html \
	html/consumption.html \
	html/loglines.html \
	html/graphconf.html \
	html/index.html \
	html/login.html \
	html/logview.html

foohtmldir = $(pythondir)/web

