SUBDIRS = scottecom raspberrygpio testplugin customalarms calculate owfs silolevel pelletcalc

nobase_dist_plugins_DATA = \
	scottecom.pellmon-plugin \
	raspberrygpio.pellmon-plugin \
	testplugin.pellmon-plugin \
	customalarms.pellmon-plugin \
	calculate.pellmon-plugin \
	owfs.pellmon-plugin \
	silolevel.pellmon-plugin \
	pelletcalc.pellmon-plugin

pluginsdir = $(libdir)/Pellmonsrv/plugins
