SUBDIRS = scottecom raspberrygpio testplugin customalarms calculate owfs silolevel pelletcalc consumption cleaning

nobase_dist_plugins_DATA = \
	scottecom.pellmon-plugin \
	raspberrygpio.pellmon-plugin \
	testplugin.pellmon-plugin \
	customalarms.pellmon-plugin \
	calculate.pellmon-plugin \
	owfs.pellmon-plugin \
	silolevel.pellmon-plugin \
	pelletcalc.pellmon-plugin \
	cleaning.pellmon-plugin \
	consumption.pellmon-plugin

pluginsdir = $(libdir)/Pellmonsrv/plugins
