consumptionplugin_PYTHON = \
	__init__.py 

consumptionplugindir = $(libdir)/Pellmonsrv/plugins/consumption

nobase_dist_templates_DATA = \
	templates/consumption1y \
	templates/consumption8w \
	templates/consumption7d \
	templates/consumption24h

templatesdir = $(libdir)/Pellmonsrv/plugins/consumption
