nobase_nbecom_PYTHON = \
	__init__.py \
	nbeprotocol/__init__.py \
	nbeprotocol/langmap.py \
	nbeprotocol/language.py \
	nbeprotocol/protocol.py \
	nbeprotocol/protocolexceptions.py \
	nbeprotocol/frames.py

nbecomdir = $(pythondir)/Pellmonsrv/plugins/nbecom

nobase_dist_nbecomdata_DATA = nbeprotocol/language/lang.uk.prop

nbecomdatadir = $(datadir)/Pellmonsrv/plugins/nbecom/

